--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ DB_PASSWORD=sense!123
 DB_NAME=csp
 
 SECRET_KEY=SenseLive-Technologies-Elkem-Software-System
+JWT_SECRET_KEY=SenseLive-Technologies-Elkem-Software-System
