--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 DB_HOST=sl02-mysql.mysql.database.azure.com
 DB_USER=senselive
 DB_PASSWORD=SenseLive@2030
-DB_NAME=tms
+DB_NAME=csp
 
 SECRET_KEY=SenseLive-Technologies-Elkem-Software-System
 JWT_SECRET_KEY=SenseLive-Technologies-Elkem-Software-System
