--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-DB_HOST=sl02-mysql.mysql.database.azure.com
+DB_HOST=data.senselive.in 
 DB_USER=senselive
-DB_PASSWORD=SenseLive@2030
+DB_PASSWORD=SenseLive@2025
 DB_NAME=csp
 
 SECRET_KEY=SenseLive-Technologies-Elkem-Software-System
